--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -1,5 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
+CONFIG_LOCALVERSION="-TheArkenstone"
 CONFIG_KERNEL_LZO=y
 CONFIG_SYSVIPC=y
 # CONFIG_RCU_FAST_NO_HZ is not set
